--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -1,3 +1,9 @@
+.user-error-message {
+  text-align: center;
+  // background-color: pink;
+  color: red;
+  font-weight: 700;
+}
 .authentication-container {
   width: 900px;
   display: flex;
